<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/register_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/email_error_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/invalid_email"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/email_edittext"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext"
            tools:ignore="TextContrastCheck"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/email_error"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/password_error_icon"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext"
            app:layout_constraintTop_toTopOf="@+id/email_edittext"
            app:srcCompat="@drawable/error"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/register_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_label"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.100000024" />

        <EditText
            android:id="@+id/username_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:hint="@string/username"
            android:importantForAutofill="yes"
            android:autofillHints="username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/register_label" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:importantForAutofill="yes"
            android:autofillHints="password"
            app:layout_constraintEnd_toStartOf="@+id/password_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_edittext" />

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:autofillHints="emailAddress"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="yes"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@+id/email_error"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext" />

        <Button
            android:id="@+id/register_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/submit"
            app:layout_constraintEnd_toEndOf="@+id/email_edittext"
            app:layout_constraintStart_toStartOf="@+id/email_edittext"
            app:layout_constraintTop_toBottomOf="@+id/email_edittext" />

        <ImageView
            android:id="@+id/password_error"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@+id/username_edittext"
            app:layout_constraintTop_toTopOf="@+id/password_edittext"
            android:contentDescription="@string/password_error_icon"
            app:srcCompat="@drawable/error"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/password_error_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/password_error_label"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/password_edittext"
            app:layout_constraintTop_toBottomOf="@+id/password_edittext"
            tools:ignore="TextContrastCheck"
            tools:visibility="visible" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
